# LyRIDS_OPENER

./: .gitignore  BRIEF_2026-06-09.md  CLAUDE.md  README.md
.tmp/: dist.py
KBS_paper/: _compile.ps1  cover_letter.tex  highlights.tex  main.tex  references.bib
configs/: anchor_dictionaries.yaml  labels.yaml  labels_conll.yaml  opener_benchmark.yaml  opener_conll.yaml  opener_conll_smoke.yaml  opener_default.yaml
opener-ner/: README.md  _smoke_test.py  pyproject.toml
opener-ner/cards/: README_opener-sup.md  README_opener-zs.md
opener-ner/opener/: __init__.py  _common.py  sup.py  zs.py
outputs/: _smoke_gner_llama.err  _smoke_gner_llama.out
paper/: .gitignore  main.tex  references.bib
scripts/: _bench_dim_typing.py  _debug_cc.py  _debug_crash.py  _debug_load.py  _dl_gliner.py  _dl_gner.py  _explore_gum.py  _explore_gum_files.py  _gen_tables.py  _move_fig.py  _pin_mainresults_floats.py  _smoke_measurement_bricks.py  _smoke_new_loaders.py  aggregate_dim_sweep.py  aggregate_embedder_comparison.py  aggregate_multiseed.py  aggregate_results.py  analyze_errors.py  export_dashboard_chart.py  make_figures.py  make_tables.py  make_umap.py  measure_encoder_cost.py  run_ablation_precise.py  run_balanced_classifiers.py  run_balanced_threshold_sweep.py  run_baselines_queue.ps1  run_bootstrap_ci.py  run_classifier_sweep.py  run_conll.py  run_legal_owner.sh  run_llm_int4_queue.ps1  run_multiseed.sh  run_opener_e2e.py  run_opener_e2e_closedner.py  run_opener_zs.py  run_opener_zs_e2e.py  run_opener_zs_e2e_fusion.py  run_opener_zs_sweep.py  run_owner_all.ps1  (+11 more)
src/: pipeline.py
(+62 files in other folders)
